--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -5,6 +5,10 @@
 
 @include nb-install-component() {
 
+  #btnAlinhamento{
+    padding-left: 40%;
+  }
+
   nb-card-body {
     overflow: visible;
   }
