--- a/src/app/pages/ui-features/typography/typography.component.html
+++ b/src/app/pages/ui-features/typography/typography.component.html
@@ -75,25 +75,23 @@
           <nb-card-body>
             <div class="header">
               <div>
-                <h1>H1. Heading</h1>
+                <h1>Hagnix</h1>
+              </div>
+
+            </div>
+            <div class="header">
+              <div>
+                <h2>Sobre Healm Of The Mad God...</h2>
               </div>
 
               <div class="detail font-w-light">
-                Demibold 2.5rem (40px)
+                Realm of the Mad God é um massivo RPG de ação cooperativo que te deixa no meio da luta em um mundo dominado por monstros. O jogo apresenta jogabilidade cooperativa online em um enorme “mundo ao vivo”, milhares de inimigos, combate em ação em tempo real, nivelamento, saque, equipamento e magia. Não há downloads, instalações ou patches necessários.
+
               </div>
             </div>
             <div class="header">
               <div>
-                <h2>H2. Heading</h2>
-              </div>
-
-              <div class="detail font-w-light">
-                Demibold 2rem (32px)
-              </div>
-            </div>
-            <div class="header">
-              <div>
-                <h3>H3. Heading</h3>
+                <h3>Mais informações sobre o game é só acessar <a href="https://www.realmeye.com/wiki">Realm Eye</a></h3>
               </div>
 
               <div class="detail font-w-light">
