--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -1,1 +1,463 @@
+@import '../../@theme/styles/themes';
+@import '~bootstrap/scss/mixins/breakpoints';
+@import '~@nebular/theme/styles/global/breakpoints';
+@import '~@nebular/bootstrap/styles/buttons';
 
+@include nb-install-component() {
+  #SobreNos{
+    width: 110px;
+    height: 40px;
+
+  }
+  #imagem{
+    display: block;
+    margin-left: 45%;
+    margin-right: auto;
+  }
+  .irParaLogin {
+    margin-right: 2px;
+    padding-bottom: 5px;
+    padding-left: 10px;
+  }
+  #botaoParaLogar{
+    width: 110px;
+    height: 40px;
+  }
+  nb-layout-column.small {
+    flex: 0.15 !important;
+  }
+  #video {
+    margin-bottom: auto;
+    margin-left: 14px;
+    margin-right: auto;
+    margin-top: 55px;
+    width: 500px;
+    height: 300px;
+  }
+  nb-card-body {
+    padding-bottom: 0;
+  }
+
+  .none {
+    position: relative;
+    transform: rotate(45deg);
+
+    &::before, &::after {
+      position: absolute;
+      content: '';
+      background: nb-theme(form-control-border-color);
+    }
+
+    &::before {
+      left: 50%;
+      top: 10%;
+      transform: translateX(-50%);
+      width: 1px;
+      height: 80%;
+    }
+
+    &::after {
+      top: 50%;
+      left: 10%;
+      transform: translateY(-50%);
+      height: 1px;
+      width: 80%;
+    }
+  }
+
+  .shadow {
+    box-shadow: nb-theme(btn-hero-shadow);
+  }
+
+  .primary-container {
+    .color {
+      background-color: nb-theme(color-primary);
+    }
+    .gradient {
+      @include btn-hero-primary-gradient();
+    }
+    .glow {
+      box-shadow: btn-hero-primary-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-primary-bevel();
+    }
+  }
+
+  .warning-container {
+    .color {
+      background-color: nb-theme(color-warning);
+    }
+    .gradient {
+      @include btn-hero-warning-gradient();
+    }
+    .glow {
+      box-shadow: btn-hero-warning-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-warning-bevel();
+    }
+  }
+
+  .success-container {
+    .color {
+      background-color: nb-theme(color-success);
+    }
+    .gradient {
+      @include btn-hero-success-gradient();
+    }
+    .glow {
+      box-shadow: btn-hero-success-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-success-bevel();
+    }
+  }
+
+  .info-container {
+    .color {
+      background-color: nb-theme(color-info);
+    }
+    .gradient {
+      @include btn-hero-info-gradient();
+    }
+    .glow {
+      box-shadow: btn-hero-info-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-info-bevel();
+    }
+  }
+
+  .danger-container {
+    .color {
+      background-color: nb-theme(color-danger);
+    }
+    .gradient {
+      @include btn-hero-danger-gradient();
+    }
+    .glow {
+      box-shadow: btn-hero-danger-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-danger-bevel();
+    }
+  }
+
+  .secondary-container {
+    .color {
+      background-color: nb-theme(btn-secondary-bg);
+    }
+    .border {
+      color: nb-theme(btn-secondary-color);
+      border: nb-theme(btn-secondary-border-width) solid nb-theme(btn-secondary-border);
+    }
+    .glow {
+      box-shadow: btn-hero-secondary-glow();
+    }
+    .bevel {
+      box-shadow: btn-hero-secondary-bevel();
+    }
+  }
+
+  .example-container {
+    margin-bottom: 1.5rem;
+  }
+  nb-sidebar.settings-sidebar {
+    $sidebar-width: 7.5rem;
+
+    transition: width 0.3s ease;
+    width: $sidebar-width;
+    overflow: hidden;
+
+    &.collapsed {
+      width: 0;
+
+      /deep/ .main-container {
+        width: 0;
+
+        .scrollable {
+          width: $sidebar-width;
+          padding: 1.25rem;
+        }
+      }
+    }
+
+    /deep/ .main-container {
+      width: $sidebar-width;
+      background: nb-theme(color-bg);
+      transition: width 0.3s ease;
+      overflow: hidden;
+
+      .scrollable {
+        width: $sidebar-width;
+      }
+
+      @include nb-for-theme(cosmic) {
+        background: nb-theme(layout-bg);
+
+      }
+    }
+  }
+
+  nb-sidebar.menu-sidebar {
+
+    margin-top: nb-theme(sidebar-header-gap);
+
+    @include nb-for-theme(corporate) {
+      margin-top: 0;
+    }
+
+    /deep/ .main-container {
+      height:
+        calc(#{nb-theme(sidebar-height)} - #{nb-theme(header-height)} - #{nb-theme(sidebar-header-gap)}) !important;
+      @include nb-ltr(border-top-right-radius, nb-theme(radius));
+      @include nb-rtl(border-top-left-radius, nb-theme(radius));
+
+      @include nb-for-theme(corporate) {
+        border: 1px solid nb-theme(separator);
+        height:
+          calc(#{nb-theme(sidebar-height)} - #{nb-theme(header-height)}) !important;
+      }
+    }
+
+    /deep/ .scrollable {
+      @include nb-for-theme(corporate) {
+        padding-top: 0;
+
+        .menu-item:first-child {
+          border-top: none;
+        }
+      }
+    }
+
+    /deep/ nb-sidebar-header {
+      padding-bottom: 0.5rem;
+      text-align: center;
+    }
+
+    background: transparent;
+
+    .main-btn {
+      padding: 0.75rem 2.5rem;
+      margin-top: -2rem;
+      font-weight: bold;
+      transition: padding 0.3s cubic-bezier(0.18, 0.89, 0.32, 1.48);
+
+      @include nb-for-theme(corporate) {
+        border-radius: nb-theme(radius);
+      }
+
+      i {
+        font-size: 2rem;
+        text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+      }
+      span {
+        @include nb-ltr(padding-left, 0.25rem);
+        @include nb-rtl(padding-right, 0.25rem);
+      }
+
+      i, span {
+        vertical-align: middle;
+      }
+    }
+
+    /deep/ nb-menu {
+      & > .menu-items {
+        & > .menu-item:first-child {
+          .menu-title {
+            &::after {
+              content: 'new';
+              color: nb-theme(color-white);
+              margin-left: 1rem;
+              background: nb-theme(color-danger);
+              padding: 0 0.5rem;
+              border-radius: nb-theme(radius);
+              font-size: nb-theme(font-size-sm);
+            }
+          }
+        }
+      }
+
+      .nb-e-commerce {
+        font-size: 2rem;
+      }
+    }
+
+    &.compacted {
+
+      /deep/ nb-sidebar-header {
+        padding-left: 0;
+        padding-right: 0;
+      }
+
+      .main-btn {
+        width: 46px;
+        height: 44px;
+        padding: 0.375rem;
+        border-radius: 5px;
+        transition: none;
+
+        span {
+          display: none;
+        }
+      }
+    }
+  }
+
+  @include media-breakpoint-down(xs) {
+    .main-content {
+      padding: 0.75rem !important;
+
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
+
+    nb-sidebar.menu-sidebar {
+
+      margin-top: 0;
+
+      /deep/ .main-container {
+        height: calc(#{nb-theme(sidebar-height)} - #{nb-theme(header-height)}) !important;
+        @include nb-ltr(border-top-right-radius, 0);
+        @include nb-rtl(border-top-left-radius, 0);
+
+        .scrollable {
+          padding-top: 0;
+        }
+      }
+    }
+
+    .main-btn {
+      display: none;
+    }
+  }
+
+  .font-secondary .font-header .name {
+    font-size: 4.5rem;
+    line-height: 4rem;
+    font-weight: nb-theme(font-weight-bold);
+  }
+
+  .font-main .font-header .name {
+    font-size: 3rem;
+    font-weight: nb-theme(font-weight-bold);
+  }
+
+  .font-row {
+    &:first-child {
+      margin-bottom: 2rem;
+    }
+
+    .header {
+      align-items: baseline;
+    }
+
+    p {
+      margin: 0;
+    }
+  }
+
+  .headings-card {
+    nb-card-body {
+      padding: 1rem 1.25rem;
+      z-index: 10;
+    }
+    .header {
+      padding-bottom: 0.675rem;
+      margin-bottom: 0.675rem;
+
+      &:last-child {
+        padding-bottom: 0;
+        margin-bottom: 0;
+      }
+    }
+  }
+
+  .header {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    border-bottom: 1px solid nb-theme(separator);
+    color: nb-theme(color-fg-heading);
+
+    &:last-child {
+      border-bottom: none;
+      padding: 0;
+      margin: 0;
+    }
+
+    div:first-child {
+      flex: 2;
+      -ms-flex: 2 1 auto;
+      line-height: 1;
+      align-items: flex-end;
+
+      h1, h2, h3, h4, h5, h6 {
+        margin-bottom: 0;
+      }
+    }
+
+    .variants {
+      flex: 1;
+      -ms-flex: 1 1 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: flex-end;
+
+      span {
+        padding-right: 1rem;
+        padding-left: 1rem;
+        font-size: 1.5rem;
+      }
+    }
+
+    .detail {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      align-items: flex-end;
+      color: nb-theme(color-fg);
+    }
+  }
+
+  .colors {
+    display: flex;
+    flex-direction: column;
+
+    .item {
+      display: flex;
+      align-items: center;
+      margin-bottom: 1.25rem;
+      &:last-child {
+        margin-bottom: 0;
+      }
+    }
+
+    .color {
+      width: 86px;
+      height: 60px;
+      border-top-right-radius: 1rem;
+      border-bottom-left-radius: 1rem;
+      @include nb-ltr(margin-right, 1rem);
+      @include nb-rtl(margin-left, 1rem);
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      margin-bottom: 0.25rem;
+    }
+  }
+
+  .text-link {
+    color: nb-theme(link-color);
+  }
+
+  .bg-link {
+    background: nb-theme(link-color);
+
+
+  }
+}
