--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -2,10 +2,11 @@
   <nb-layout-header fixed>
   <img src="assets/images/pagina-inicial/logo.png" width="100px" id="imagem">
     <div  class="irParaLogin" >
-      <a href="/#/auth/login "><button  nbButton class="btn-hero-primary" id="botaoParaLogar">Logar</button></a>
+      <a *ngIf="!logged" (click) ="navigate('/#/auth/login')"><button  nbButton class="btn-hero-primary" id="botaoParaLogar">Logar</button></a>
+      <a *ngIf="logged"  (click) ="navigate('pages/dashboard')">Jogar</a>
     </div>
-    <div  class="irParaLogin" >
-      <a href="/#/auth/login "><button  nbButton class="btn-hero-primary" id="SobreNos">Sobre nós</button></a>
+    <div  class="irParaLogin">
+      <a (click)="navigate('')"><button  nbButton class="btn-hero-primary" id="SobreNos">Sobre nós</button></a>
     </div>
   </nb-layout-header>
   <nb-layout-column class="main-content">
@@ -55,8 +56,8 @@
 
               <section id="section_video">
                 <div class="container">
-                  <video  id="video" autoplay loop controls muted>
-                    <source src="https://steamcdn-a.akamaihd.net/steam/apps/256691764/movie480.webm?t=1501574840" type="video/webm">
+                  <video id="video" autoplay loop controls muted>
+                    <source src="https://steamcdn-a.akamaihd.net/steam/apps/256691764/movie480.webm?t=1501574840" type="video/webm'>
                   </video>
                 </div>
               </section>
