--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -1,17 +1,14 @@
 <nb-layout [center]="false" windowMode>
   <nb-layout-header fixed>
-  <img src="assets/images/pagina-inicial/logo.png" width="100px" id="imagem">
+    <img src="assets/images/pagina-inicial/logo.png" width="100px" id="imagem">
     <div  class="irParaLogin" >
-      <a *ngIf="!logged" (click) ="navigate('/#/auth/login')"><button  nbButton class="btn-hero-primary" id="botaoParaLogar">Logar</button></a>
+      <a *ngIf="!logged" (click) ="navigate('/auth/login')"><button  nbButton class="btn-hero-primary" id="botaoParaLogar">Logar</button></a>
       <a *ngIf="logged"  (click) ="navigate('pages/dashboard')">Jogar</a>
-    </div>
-    <div  class="irParaLogin">
-      <a (click)="navigate('')"><button  nbButton class="btn-hero-primary" id="SobreNos">Sobre nós</button></a>
     </div>
   </nb-layout-header>
   <nb-layout-column class="main-content">
     <div class="row">
-      <div class="col-md-6 col-xxl-7">
+      <div class="col-12 col-md-12 col-xxl-6">
         <nb-card size="small">
           <nb-card-header>
             Hagnix Projeto: Realm of The Mad God
@@ -50,20 +47,41 @@
       </div>
 
 
-    <div class="col-md-6 col-xxl-5">
+      <div class="col-12 col-md-12 col-xxl-5">
         <nb-card size="medium" class="headings-card">
           <nb-card-body>
-
+            <div class="centralizando">
               <section id="section_video">
                 <div class="container">
-                  <video id="video" autoplay loop controls muted>
-                    <source src="https://steamcdn-a.akamaihd.net/steam/apps/256691764/movie480.webm?t=1501574840" type="video/webm'>
+                  <video id="video" autoplay loop controls muted="muted">
+                    <source src="https://steamcdn-a.akamaihd.net/steam/apps/256691764/movie480.webm?t=1501574840" type="video/webm">
                   </video>
                 </div>
               </section>
-
-
+            </div>
           </nb-card-body>
+        </nb-card>
+        <nb-card>
+          <nb-flip-card>
+            <nb-card-front>
+              <nb-card>
+                <nb-card-body>
+                  <h1>Davi Herique</h1>
+                  <p>adhuadahuwduahwduhawuhdaudhuaudhawuhdhuawhudahwdhawhuhawhudahuhudawhudahuwd</p>
+                </nb-card-body>
+              </nb-card>
+            </nb-card-front>
+            <nb-card-back>
+              <nb-card>
+                <nb-card-body>
+                  <h1>Moisés Alcides Kaufmann</h1>
+                  <p>Desenvolvedor FrontEnd Angular 6, estudante de Ciência da Computação na Universidade Lasalle Canoas, já tentei me alocar em
+                    muitas áreas diferentes, mas a TI foi o caminho que eu escolhi por agora. Já fui jogador de Rugby, estudante de Matemática Licenciatura e Bacharel.
+                    Demorei muitos anos para encontrar a área em que me daria melhor, que fosse mais desafiador e interessante pra mim.</p>
+                </nb-card-body>
+              </nb-card>
+            </nb-card-back>
+          </nb-flip-card>
         </nb-card>
       </div>
     </div>
@@ -72,9 +90,6 @@
   <nb-layout-footer fixed>
     <ngx-footer></ngx-footer>
   </nb-layout-footer>
-
-
-
 </nb-layout>
 
 
