--- a/src/app/pages/index/index.component.scss
+++ b/src/app/pages/index/index.component.scss
@@ -4,11 +4,24 @@
 @import '~@nebular/bootstrap/styles/buttons';
 
 @include nb-install-component() {
-  #SobreNos{
-    width: 110px;
-    height: 40px;
+  .backgroundImage{
+    opacity: 20%;
 
   }
+
+
+  .centralizando{
+    height: 100%;
+    min-height: 100%;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+
+  }
+
   #imagem{
     display: block;
     margin-left: 45%;
@@ -28,9 +41,7 @@
   }
   #video {
     margin-bottom: auto;
-    margin-left: 14px;
     margin-right: auto;
-    margin-top: 55px;
     width: 500px;
     height: 300px;
   }
@@ -362,7 +373,6 @@
   .headings-card {
     nb-card-body {
       padding: 1rem 1.25rem;
-      z-index: 10;
     }
     .header {
       padding-bottom: 0.675rem;
