--- a/src/app/pages/index/index.component.html
+++ b/src/app/pages/index/index.component.html
@@ -3,7 +3,7 @@
     <img src="assets/images/pagina-inicial/logo.png" width="100px" id="imagem">
     <div  class="irParaLogin" >
       <a *ngIf="!logged" (click) ="navigate('/auth/login')"><button  nbButton class="btn-hero-primary" id="botaoParaLogar">Logar</button></a>
-      <a *ngIf="logged"  (click) ="navigate('pages/dashboard')">Jogar</a>
+      <a *ngIf="logged"  (click) ="navigate('game')">Jogar</a>
     </div>
   </nb-layout-header>
   <nb-layout-column class="main-content">
@@ -67,7 +67,9 @@
               <nb-card>
                 <nb-card-body>
                   <h1>Davi Herique</h1>
-                  <p>adhuadahuwduahwduhawuhdaudhuaudhawuhdhuawhudahwdhawhuhawhudahuhudawhudahuwd</p>
+                  <p>Estudante Universitário de Ciências da Computação na Universidade Lasalle Canoas, desenvolvedor fullstack com ênfase em Backend
+                  com o desenvolvimento de aplicações em GoLang, Java, Kotlin, Node.js, Javascript, Typescript, C/C++. Estudante nato de novas tecnologias
+                  e metodologias de desenvolvimento de aplicações. Atualmente trabalhando como desenvolvedor na NTConsult em Porto Alegre.</p>
                 </nb-card-body>
               </nb-card>
             </nb-card-front>
