--- a/src/app/pages/game-page/game-page.component.html
+++ b/src/app/pages/game-page/game-page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid">
 <div  class="plano-de-fundo">
   <div class="centralizando">
-  <embed src="https://www.realmofthemadgod.com/AGCLoader1541591768.swf" class="tamanho">
+  <embed src="assets/game/client.swf" class="tamanho">
   </div>
 </div>
 </div>
